assets/main.css
@import "https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.6.0/build/styles/github.min.css";
@import "/assets/code.css";

body {
  font-family: "Helvetica Neue", helvetica, sans-serif;
  background-color: whitesmoke;
}

a {
  color: rgb(93, 187, 224);
  font-weight: bold;
  text-decoration: underline;
}

a:hover {
  font-weight: bold;
  text-decoration: underline;
}

ul {
  list-style-position: inside;
  padding-left: 1em;
  margin-top: -10px;
}

li {
  list-style: circle;
}

li a {
  text-decoration: none;
}

h2 a {
  text-decoration: none;
  color: black;
}

img {
  max-width: 100%;
}

video {
  max-width: 100%;
}

code {
  margin-left: 4px;
  margin-right: 4px;
}

.header {
  font-size: 30px;
  height: 40px;
  text-align: center;
}

.header a {
  text-decoration: none;
  color: rgb(93, 187, 224);
}

.container-center {
  width: 70%;
  height: 100%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 1;
  padding: 10px;
}

.about-section {
  float: left;
  margin-top: 20px;
  width: 100% auto;
}

.about-header {
  height: auto;
  margin-bottom: -10px;
}

.about-text {
  float: left;
  width: 60%;

}

.about-links {
  float: left;
  padding-left: 20px;
}

.post-section {
  float: left;
  width: 100%;
  margin-top: -20px;
}

.post-navigation ul {
  list-style: none;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.post-navigation li {
  padding: 1em;
  list-style: none;
}

.column {
  float: inherit;
  width: fit-content;
  padding-right: 10px;
  /*
  width: 33%;
  min-width: 30%;
  max-width: 50%;
  */
}

.centered-index {
  margin: 0 auto;
  width: fit-content;
}

.error-block {
  margin-top: 30%;
  margin-bottom: 30%;
  text-align: center;
  justify-content: center;
  width: 100%;
}

.footer {
  height: 30px;
  width: 100%;
  bottom: 0;
  left: 0;
  margin-bottom: auto;
  position: relative;
  display: inline-block;
  text-align:center;
}

a.rss-icon {
  content:url("../assets/rss.png");
  height: 18px;
  width: 18px;
  margin-left: 10px;
}

/* Use a media query to add a breakpoint for window size */
@media screen and (max-width: 1120px) {
  .container-center, .about-text, .about-links, .centered-index {
    float: none;
    width: 100%;
    margin-left: 0px;
    margin-right: 0px;
    padding: 0px;
  }

  .post-section {
    float: left;
    width: 100%;
    margin: 10;
  }

  .column {
    margin-top: -10px;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
  }

  .footer {
    height: 30px;
  }
}

/* Use a media query to invert color scheme */
@media (prefers-color-scheme: dark) {
  body {
    background-color: rgb(49, 49, 49);
    color: white;
  }

  .header a {
    text-decoration: none;
    color: rgb(93, 187, 224);
    background-color: transparent;
  }

  h2 a {
    color: white;
  }

  a {
    color: rgb(93, 187, 224);
    font-weight: bold;
    text-decoration: underline;
  }
}

